Fixes for temp viewing

--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -1,18 +1,12 @@
 ---
 layout: page
-title: "Oops! Nothing here..."
-subheadline: "HTTP 404"
-teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the link?"
 sitemap: false
 permalink: "/404.html"
+header:
+  image_fullwidth: "bg4.jpeg"
+  title: "404 Not Found"
 ---
-## No problem!
 
-Try...  
-...to start over on the [home page]({{ site.baseurl }}/);  
-...to **search** below;  
-if you can't find it, [ask about it]({{ site.baseurl }}/contact/).
+## Sorry, this page couldn't be found.
 
-### Search
-
-{% include _google_search.html %}
+{% include button.html text="Return to home page" url="/" %}
