More layout changes - smaller font - lightened image - easier-to-edit pages - facilities changed

--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -9,4 +9,4 @@ header:
 
 ## Sorry, this page couldn't be found.
 
-{% include button.html text="Return to home page" url="/" %}
+{% include button text="Return to home page" url="/" %}
